cooknco/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cooknco-frontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
  - hosts:
    - "cooknco.eu"
    secretName: cooknco-tls
  rules:
    - host: cooknco.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cooknco-frontend
                port:
                  number: 80
